<resources>
    <string name="app_name">Pokedex</string>
    <string name="nombre_pokemon">Nombre</string>
    <string name="indice_pokemon">Orden en la pokedex</string>
    <string name="peso_pokemon">Peso de el  Pokemon</string>
    <string name="altura_pokemon">Altura de el pokemon</string>
    <string name="ajustes">Ajustes</string>
    <string name="Acercade">Acerca de...</string>
    <string name="pagina_inicio">Pagina Inicio</string>
    <string name="lista_pokemons">Lista Pokemons</string>

    <string name="idioma">Cambiar español/ingles</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="pokedex">Pokedex</string>
    <string name="pokemon_capturados">Pokemon Capturados</string>
    <string name="longin">Iniciar sesion</string>
    <string name="introduce_email">Introduce tu email</string>
    <string name="introduce_password">Introduce tu constraseña</string>
    <string name="register">Registrar usuario</string>
    <string name="iniciar_google">Iniciar sesion con google</string>
    <string name="Ir_registro"> Registrarse con email y constraseña</string>
    <string name="confirmar_cierre_sesion">Confirmar cierre de sesion</string>
    <string name="desea_cerrar_sesion">Desea cerrar sesion</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="tipo_pokemon">Tipo pokemon</string>
    <string name="eliminar_pokemon">Eliminar pokemon</string>
    <string name="develop">Aplicacion desarrollada por Guillermo Fuentes Buenosvinos</string>
    <string name="captura">¡Captura exitosa!</string>
    <string name="capturado"> ha sido capturado</string>
    <string name="pokemon_capturado"> Pokemon Capturado</string>
    <string name="siguiente">Siguiente</string>
    <string name="anterior">Anterior</string>
    <string name="titulo_eliminacion_deshabilitada">Eliminacion deshabilitada</string>
    <string name="habilitar_eliminacion">Habilitar eliminacion</string>
    <string name="mensaje_eliminacion_deshabilitada">La eliminacion no esta habilitada por favor habilitala</string>
    <string name="aceptar">Aceptar</string>
    <string name="titulo_eliminacion_no_encontrado">Pokemon no encontrado</string>
    <string name="mensaje_eliminacion_no_encontrado">El pokemon seleccionado no se ha encontrado</string>
    <string name="titulo_eliminacion_exitosa">Eliminacion exitosa</string>
    <string name="mensaje_eliminacion_exitosa">eliminado con exito</string>
    <string name="titulo_pokemon_capturado">Pokémon ya Capturado</string>
    <string name="mensaje_pokemon_capturado">ya esta capturado</string>
    <string name="cancelar">Cancelar</string>
    <string name="titulo_confirmar_eliminacion">Confirmar eliminacion</string>
    <string name="mensaje_eliminacion">¿Estás seguro de que deseas eliminar a %s?</string>
</resources>