<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--Layout usado para mostrar la informacion del RecyclerView-->



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imagepokemon"
                android:layout_width="50dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nombrepokemon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_pokemon"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/indicepokemon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indice_pokemon"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/pesopokemon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peso_pokemon"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/alturakemon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altura_pokemon"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>
