<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DetallesPokemonCapturado">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/container_pokemon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <!-- Tarjeta para los detalles del Pokémon -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                app:strokeColor="@color/azul"
                app:strokeWidth="2dp"
                android:padding="16dp"
                android:backgroundTint="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <!-- Imagen del Pokémon -->
                    <ImageView
                        android:id="@+id/imagepokemon"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_margin="10dp"
                        app:srcCompat="@drawable/ic_launcher_foreground" />

                    <!-- Nombre del Pokémon -->
                    <TextView
                        android:id="@+id/nombre_detalle_pokemon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/azul"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:padding="8dp"
                        style="@style/PokemonTextStyle"
                        android:text="@string/nombre_pokemon" />

                    <!-- Separador -->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/azul"
                        android:layout_marginVertical="12dp" />

                    <!-- Información del Pokémon -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal">

                        <TextView
                            android:textColor="@color/azul"
                            android:textSize="18sp"
                            android:text="@string/indice_pokemon"
                            android:textStyle="bold"
                            style="@style/PokemonTextStyle"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"/>

                        <TextView
                            android:id="@+id/orden_detalle_Pokedex"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/rojo"
                            android:textSize="18sp"
                            style="@style/PokemonTextStyleHollow"
                            android:text="@string/indice_pokemon" />

                        <TextView
                            android:textColor="@color/azul"
                            android:textSize="18sp"
                            android:text="@string/peso_pokemon"
                            android:textStyle="bold"
                            style="@style/PokemonTextStyle"
                            android:layout_marginTop="12dp"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"/>

                        <TextView
                            android:id="@+id/peso_pokemon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/rojo"
                            style="@style/PokemonTextStyleHollow"
                            android:textSize="18sp"
                            android:text="@string/peso_pokemon" />

                        <TextView
                            android:textColor="@color/azul"
                            android:textSize="18sp"
                            android:text="@string/altura_pokemon"
                            android:textStyle="bold"
                            style="@style/PokemonTextStyle"
                            android:layout_marginTop="12dp"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"/>

                        <TextView
                            android:id="@+id/altura_detalle_pokemon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/rojo"
                            style="@style/PokemonTextStyleHollow"
                            android:textSize="18sp"
                            android:text="@string/altura_pokemon" />

                        <TextView
                            android:textColor="@color/azul"
                            android:textSize="18sp"
                            android:text="@string/tipo_pokemon"
                            android:textStyle="bold"
                            android:layout_marginTop="12dp"
                            style="@style/PokemonTextStyle"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"/>

                        <TextView
                            android:id="@+id/tipo_pokemon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/rojo"
                            style="@style/PokemonTextStyleHollow"
                            android:textSize="18sp"
                            android:text="@string/tipo_pokemon" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Botón de eliminar -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/eliminar_pokemon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eliminar_pokemon"
                android:layout_marginTop="24dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:cornerRadius="50dp"
                android:backgroundTint="@color/rojo"
                android:textColor="@color/white" />

            <!-- Contenedor para botones Anterior y Siguiente -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <!-- Botón Anterior -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/botonAnterior"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/anterior"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    app:cornerRadius="50dp"
                    android:backgroundTint="@color/azul"
                    android:textColor="@color/white"
                    android:layout_marginEnd="8dp" />

                <!-- Botón Siguiente -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/botonSiguiente"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/siguiente"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    app:cornerRadius="50dp"
                    android:backgroundTint="@color/azul"
                    android:textColor="@color/white"
                    android:layout_marginStart="8dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
