<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Ajustes">

    <TextView
        android:id="@+id/eliminacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/habilitar_eliminacion_capturados"
        android:textColor="@color/azul"
        style="@style/PokemonTextStyle"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.371"
    app:layout_constraintStart_toEndOf="@+id/habilitar_eliminacion"
    app:layout_constraintTop_toTopOf="parent" />


    <Switch
        android:id="@+id/habilitar_eliminacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:thumbTint="@color/ios_blue"
    android:trackTint="@color/ios_track"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


    <Switch
        android:id="@+id/cambiar_idioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:thumbTint="@color/ios_blue"
        android:trackTint="@color/ios_track"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habilitar_eliminacion" />

    <TextView
        android:id="@+id/idioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="44dp"
        android:textColor="@color/azul"
        style="@style/PokemonTextStyle"
        android:textSize="16sp"
        android:text="@string/idioma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toEndOf="@+id/cambiar_idioma"
        app:layout_constraintTop_toBottomOf="@+id/eliminacion" />

    <Button
        android:id="@+id/cerrar_sesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/cerrar_sesion"
    android:background="@drawable/ios_button_background"
    android:padding="12dp"
        style="@style/PokemonTextStyle"
        android:textColor="@color/azul"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.425"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/idioma" />

    <Button
        android:id="@+id/acercade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/Acercade"
        style="@style/PokemonTextStyle"
        android:textColor="@color/azul"
        android:background="@drawable/ios_button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cerrar_sesion" />

</androidx.constraintlayout.widget.ConstraintLayout>